[tool.poetry]
name = "ds-algo"
version = "0.1.0"
description = ""
authors = ["varaprasad <pothulavaraprasad333@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10.4"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
